--- a/themes/oranges/languages/default.yml
+++ b/themes/oranges/languages/default.yml
@@ -2,6 +2,8 @@ categories: Categories
 search: Search...
 searchFirst: First search, index file loading, please wait...
 searchNoResult: No result
+searchFilesNotfound: The search.xml file was not found, please refer to：
+searchServiceErrors: The request failed, Try to refresh the page or try again later.
 tags: Tags
 tagcloud: Tag Cloud
 tweets: Tweets
@@ -19,6 +21,6 @@ powered_by: Powered by
 rss_feed: RSS Feed
 category: Category
 tag: Tag
-catalog: Content
+catalog: Contents
 pinned: Pinned
 updateTime: Update time
